--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,7 @@ jobs:
     steps:
       - checkout
       - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: go get golang.org/x/tools/cmd/cover
+      - run: go get github.com/mattn/goveralls
+      - run: go test -v -covermode=count -coverprofile=coverage.out ./...
+      - run: goveralls -coverprofile=coverage.out -service=circle-ci -repotoken $COVERALLS_TOKEN
