--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
       - run: go get -v -t -d ./...
       - run: go get golang.org/x/tools/cmd/cover
       - run: go get github.com/mattn/goveralls
-      - run: go test -v -covermode=count -coverprofile=coverage.out ./...
+      - run: go test -v -covermode=count -coverprofile=coverage.out
       - run: goveralls -coverprofile=coverage.out -service=circle-ci -repotoken $COVERALLS_TOKEN
